	- resolved crashes after failed gmysql/gpgsql connections
	- major brokenness in slave support in gmysql/gpgsql (mark)
	- solaris compilation fixes
	- make IPv6 work again on FreeBSD (Peter van Dijk)
	- neglected to properly initialize the socklen of accept of dynlistener ;-(
	- make *all* sql in gsqlbackends available for configuration (Martin Klebermass/bert hubert)

Changes since 2.9.2:
	- windows compilation patches
	- tiny improvements in win98 error messages
	- pgmysqlbackend may have been unable to launch
		now called gpgsql and gpgsql2
	- bind backend can now deal with broken and missing zones
	- bind backend reports way more errors instead of just falling over
	- can now understand incoming RP records in AXFR
	- fixed potential crasher bug in shortened packet parsing
	- now groks LOC records incoming/outgoing
	- configparser now strips leading spaces in arguments
	- improved chroot error reporting

	- lots of bind backend work
		- we now ignore 'hint' 'forward' whatever zones
	- added 'bind-domain-status', 'bind-reload-now'
	- added 'retrieve'
	- bind zones are now way smaller on disk
	- 'notify' no longer prints out garbage to pdns_control
	- more verbose logging of AXFRs - is a heavy operation already,
	  logging won't add much to that
	- suppressed a lot of master/slave chatter about 'all slaves/masters
	  fresh'
	
Changes since 2.9.1:
	- removed debugging output from the webserver (found by Paul Wouters)
	- due to Solaris portability fixes, qtypes>127 were broken. 
	  These include NAPTR, ANY and AXFR. The upshot is that powerdns
	  wasn't performing outgoing AXFRs nor ANY queries. These were the
          'question for type -1' warnings in the log
	
	- pdns/pdns now has a +x by default (suggested by Paul Wouters)
        - bug in documentation (pgmysqlbackend != pgmysql backend) (Paul Wouters)

	- Red Hat has weird location for pgsql includes (Paul Wouters)

	- incoming AXFR could theoretically miss some trailing records